favoritos - layout / reorganização de imagens e rss

--- a/src/sideMenu/navBar.html
+++ b/src/sideMenu/navBar.html
@@ -1,34 +1,34 @@
     <div class="navbar">
         <div class="side-menu">
             <div class="align-on-menu hamburguer">
-                <img src="../sideMenu/menu.svg" alt="hamburguer-menu">
+                <img src="../rss/img/menu.svg" alt="hamburguer-menu">
                 PODCAST
             </div>
             <div class="h-line"></div>
             <div class="align-on-menu home">
-                <img src="../sideMenu/home.svg" alt="home-menu">
+                <img src="../rss/img/home.svg" alt="home-menu">
                 Home
             </div>
             <div class="align-on-menu">
-                <img src="../sideMenu/heart.svg" alt="favorites-menu">
+                <img src="../rss/img/heart.svg" alt="favorites-menu">
                 Favoritos
             </div>
             <div class="align-on-menu">
-                <img src="../sideMenu/list.svg" alt="channels-menu">
+                <img src="../rss/img/list.svg" alt="channels-menu">
                 Canais
             </div>
             <div class="h-line"></div>
             <div class="align-on-menu">
-                <img src="../sideMenu/add.svg" alt="new-episode-menu">
+                <img src="../rss/img/add.svg" alt="new-episode-menu">
                 Novo Episódio
             </div>
             <div class="align-on-menu">
-                <img src="../sideMenu/chart.svg" alt="statistics-menu">
+                <img src="../rss/img/chart.svg" alt="statistics-menu">
                 Estatísticas
             </div>
             <div class="h-line"></div>
             <div class="align-on-menu">
-                <img src="../sideMenu/account.svg" alt="account-menu">
+                <img src="../rss/img/account.svg" alt="account-menu">
                 Conta
             </div>
         </div>
