--- a/src/searchBar/searchBar.html
+++ b/src/searchBar/searchBar.html
@@ -1,10 +1,6 @@
-<div class="barra-pesquisa">
-    <input type="text" placeholder="Pesquisar" />
-    <div>
-        <button> Buscar <img src="../searchBar/searchItem.svg">
-        </button>
-    </div>
-</div>
+<input type="text" placeholder="Pesquisar" />
+<button type="submit"> Buscar <img src="../searchBar/searchItem.svg">
+</button>
 
 <style>
   .barra-pesquisa {
@@ -12,46 +8,48 @@
     flex-direction: row;
   }
 
-  .barra-pesquisa > input {
+  input {
+    position: relative;
     outline: none;
     width: 70%;
     height: 35px;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+    border-radius: 25px;
     background-color: E5E5E5;
     border: 0px;
   }
 
-  .barra-pesquisa > input::placeholder {
+  input:hover {
+    border: 1px solid #3BB4B4;
+  }
+
+  input::placeholder {
     padding-left: 30px;
   }
 
-  .barra-pesquisa > div {
-    height: 35px;
-    min-width: 85px;
-    border: 0px;
-    background-color: E5E5E5;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-  }
-
-  .barra-pesquisa > div > button {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 90%;
-    margin-top: 2.0%;
+  button {
+    display: inline-flex;
+    position: absolute;
+    margin-top: 2.4px;
+    margin-left: -87px;
+    height: 31px;
+    width: 84px;
     border-radius: 25px;
     background-color: rgb(187, 184, 184);
     border: 0px;
     color:rgb(253, 253, 253);
-    padding-top: 9%;
-    padding-left: 15%;
+    padding-top: 7px;
+    padding-left: 13px;
+    cursor: pointer;
   }
 
-  .barra-pesquisa > div > button > img {
+  button:hover {
+    border: 1.2px solid #8e9191;
+  }
+
+  button > img {
     height: 20px;
     width: 20px;
   }
 
 </style>
+
