--- a/src/searchBar/searchBar.html
+++ b/src/searchBar/searchBar.html
@@ -1,3 +1,8 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+
+</head>
+
 <input type="text" placeholder="Pesquisar" />
 <button type="submit"> Buscar <img src="../searchBar/searchItem.svg">
 </button>
@@ -9,6 +14,8 @@
   }
 
   input {
+    font-family: 'Inter', sans-serif;
+    font-weight: bolder;
     position: relative;
     outline: none;
     width: 70%;
@@ -27,6 +34,8 @@
   }
 
   button {
+    font-family: 'Inter', sans-serif;
+    font-weight: bolder;
     display: inline-flex;
     position: absolute;
     margin-top: 2.4px;
