--- a/src/sideMenu/navBar.html
+++ b/src/sideMenu/navBar.html
@@ -1,9 +1,14 @@
+<body>
     <div class="navbar">
+        <button onclick="switchSideMenu(true)" class="align-on-menu hamburguer">
+            <img src="../rss/img/menu.svg" alt="hamburguer-menu">
+        </button>
         <div class="side-menu">
-            <div class="align-on-menu hamburguer">
+            <div class="outer-window" onclick="switchSideMenu(false)"></div>
+            <button onclick="switchSideMenu(false)" class="align-on-menu hamburguer">
                 <img src="../rss/img/menu.svg" alt="hamburguer-menu">
                 PODCAST
-            </div>
+            </button>
             <div class="h-line"></div>
             <div class="align-on-menu home">
                 <img src="../rss/img/home.svg" alt="home-menu">
@@ -33,6 +38,22 @@
             </div>
         </div>
     </div>
+</body>
+
+<script>
+    function switchSideMenu(open) {
+        if (open) {
+            const menu = document.querySelector('.side-menu');
+            menu.style["display"] = "block"
+        }
+        else {
+            const menu = document.querySelector('.side-menu');
+            menu.style["display"] = "none"
+        }
+        
+    }
+</script>
+    
 <style>
     body {
         background-color: pink;
@@ -40,22 +61,35 @@
     .navbar {
         width: 100%;
         height: 5vh;
-        background-color: black;
+        background-color: #F5BD9C;
         position: absolute;
         top: 0;
         left: 0;
+    }
+    .navbar button {
+        border: 0;
+        background: unset;
+    }
+    .navbar button:hover {
+        cursor: pointer;
     }
     .side-menu {
         background-color: #F5BD9C;
         width: 200px;
         height: 100vh;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
+        display: none;
+        z-index: 999;
+
     /*  padding: 10px 30px;
         display: flex;
         flex-direction: row;
         justify-content: flex-start; */
+    }
+    .side-menu:active {
+        display: block;
     }
     .h-line {
         height: 1px;
@@ -80,5 +114,12 @@
     .hamburguer {
         font-size: 1.5rem;
         height: 40px;
+    }
+    .outer-window {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        z-index: 99;
+        margin-left: 200px;
     }
 </style>
