--- a/src/searchBar/searchBar.html
+++ b/src/searchBar/searchBar.html
@@ -2,44 +2,49 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
 
 </head>
-
-<input type="text" placeholder="Pesquisar" />
-<button type="submit"> Buscar <img src="../searchBar/searchItem.svg">
-</button>
+<div class="barra-pesquisa">
+  <input type="text" placeholder="Pesquisar" />
+  <button type="submit"> Buscar 
+    <img src="../searchBar/searchItem.svg">
+  </button>
+</div>
 
 <style>
   .barra-pesquisa {
     display: flex;
     flex-direction: row;
-  }
-
-  input {
     font-family: 'Inter', sans-serif;
     font-weight: bolder;
     position: relative;
     outline: none;
-    width: 70%;
+    width: 500px;
     height: 35px;
     border-radius: 25px;
-    background-color: E5E5E5;
+    background-color: #E5E5E5;
     border: 0px;
+    align-content: center;
+    align-items: center;
+    margin: auto;
   }
 
-  input:hover {
+  .barra-pesquisa input {
+    width: 100%;
+    border: 0;
+    background: unset;
+  }
+
+  .barra-pesquisa input:hover {
     border: 1px solid #3BB4B4;
   }
 
-  input::placeholder {
+  .barra-pesquisa input::placeholder {
     padding-left: 30px;
   }
 
-  button {
+  .barra-pesquisa button {
     font-family: 'Inter', sans-serif;
     font-weight: bolder;
     display: inline-flex;
-    position: absolute;
-    margin-top: 2.4px;
-    margin-left: -87px;
     height: 31px;
     width: 84px;
     border-radius: 25px;
@@ -49,15 +54,23 @@
     padding-top: 7px;
     padding-left: 13px;
     cursor: pointer;
+    position: relative;
+    right: 2px;
   }
 
-  button:hover {
+  .barra-pesquisa button:hover {
     border: 1.2px solid #8e9191;
   }
 
-  button > img {
+  .barra-pesquisa button > img {
     height: 20px;
     width: 20px;
+  }
+
+  @media (max-width: 600px) {
+    .barra-pesquisa {
+      width: 100%;
+    }
   }
 
 </style>
