--- a/src/sideMenu/navBar.html
+++ b/src/sideMenu/navBar.html
@@ -1,61 +1,110 @@
+<body>
     <div class="navbar">
+        <button onclick="switchSideMenu(true)" class="align-on-menu hamburguer">
+            <img src="../rss/img/menu.svg" alt="hamburguer-menu">
+        </button>
         <div class="side-menu">
-            <div class="align-on-menu hamburguer">
+            <div class="outer-window" onclick="switchSideMenu(false)"></div>
+            <button onclick="switchSideMenu(false)" class="align-on-menu hamburguer">
                 <img src="../rss/img/menu.svg" alt="hamburguer-menu">
                 PODCAST
-            </div>
+            </button>
             <div class="h-line"></div>
             <div class="align-on-menu home">
-                <img src="../rss/img/home.svg" alt="home-menu">
-                Home
+                <a href="../view/home.html">
+                    <img src="../rss/img/home.svg" alt="home-menu">
+                    Home
+                </a>
             </div>
             <div class="align-on-menu">
-                <img src="../rss/img/heart.svg" alt="favorites-menu">
-                Favoritos
+                <a href="../view/favorites.html">
+                    <img src="../rss/img/heart.svg" alt="favorites-menu">
+                    Favoritos
+                </a>
             </div>
             <div class="align-on-menu">
-                <img src="../rss/img/list.svg" alt="channels-menu">
-                Canais
-            </div>
-            <div class="h-line"></div>
-            <div class="align-on-menu">
-                <img src="../rss/img/add.svg" alt="new-episode-menu">
-                Novo Episódio
-            </div>
-            <div class="align-on-menu">
-                <img src="../rss/img/chart.svg" alt="statistics-menu">
-                Estatísticas
+                <a href="../view/channels.html">
+                    <img src="../rss/img/list.svg" alt="channels-menu">
+                    Canais
+                </a>
             </div>
             <div class="h-line"></div>
             <div class="align-on-menu">
-                <img src="../rss/img/account.svg" alt="account-menu">
-                Conta
+                <a href="../view/newEpisode.html">
+                    <img src="../rss/img/add.svg" alt="new-episode-menu">
+                    Novo Episódio
+                </a>
+            </div>
+            <div class="align-on-menu">
+                <a href="../view/statistic.html">
+                    <img src="../rss/img/chart.svg" alt="statistics-menu">
+                     Estatísticas
+                </a>
+            </div>
+            <div class="h-line"></div>
+            <div class="align-on-menu">
+                <a href="../view/account.html">
+                    <img src="../rss/img/account.svg" alt="account-menu">
+                    Conta
+                </a>
+            </div>
+            <div class="h-line"></div>
+            <div class="align-on-menu sair">
+                <a href="../view/login.html">
+                    <img src="../rss/img/sign-out-alt-solid.svg" >
+                    Sair
+                </a>
             </div>
         </div>
     </div>
+</body>
+
+<script>
+    function switchSideMenu(open) {
+        if (open) {
+            const menu = document.querySelector('.side-menu');
+            menu.style["display"] = "block"
+        }
+        else {
+            const menu = document.querySelector('.side-menu');
+            menu.style["display"] = "none"
+        }
+        
+    }
+</script>
+    
 <style>
     body {
         background-color: pink;
     }
     .navbar {
         width: 100%;
-        height: 5vh;
-        background-color: black;
-        position: absolute;
+        height: 40.5px;
+        background-color: #F5BD9C;
+        position: fixed;
         top: 0;
         left: 0;
+        z-index: 2;
+    }
+    .navbar button {
+        border: 0;
+        background: unset;
+    }
+    .navbar button:hover {
+        cursor: pointer;
     }
     .side-menu {
         background-color: #F5BD9C;
         width: 200px;
         height: 100vh;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
-    /*  padding: 10px 30px;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start; */
+        display: none;
+        z-index: 999;
+    }
+    .side-menu:active {
+        display: block;
     }
     .h-line {
         height: 1px;
@@ -71,6 +120,11 @@
         justify-content: flex-start;
         align-items: center;
         padding: 10px 10px;
+        cursor: pointer;
+    }
+    .align-on-menu a {
+        text-decoration: none;
+        color: black;
     }
     .align-on-menu img {
         padding: 0 10px;
@@ -80,5 +134,12 @@
     .hamburguer {
         font-size: 1.5rem;
         height: 40px;
+    }
+    .outer-window {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        z-index: 99;
+        margin-left: 200px;
     }
 </style>
